tests/fsharp/typecheck/sigs/neg54.bsl

neg54.fs(8,25,8,30): typecheck error FS0039: The value or constructor '_arg1' is not defined. Maybe you want one of the following: nullArg, _GUID, char, log10, string
